WTPlanner/force-app/main/default/objects/Staffing_Setting__mdt/Staffing_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for World Tour Staffing app, including optional Slack integration.</description>
    <label>Staffing Setting</label>
    <pluralLabel>Staffing Settings</pluralLabel>
</CustomObject>