WTPlanner/force-app/main/default/objects/Staffing_Setting__mdt/fields/Allowed_Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Email_Domain__c</fullName>
    <description>Optional email domain restriction for user creation (e.g. salesforce.com). Leave blank to allow any domain.</description>
    <label>Allowed Email Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>