WTPlanner/force-app/main/default/objects/Staffing_Setting__mdt/fields/Slack_Notifications_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Slack_Notifications_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, Salesforce sends shift change notifications to Slack via webhook.</description>
    <label>Slack Notifications Enabled</label>
    <type>Checkbox</type>
</CustomField>