WTPlanner/force-app/main/default/objects/Staffing_Setting__mdt/fields/Slack_Owner_Webhook_URL__c.field-meta.xml
<CustomField>
    <fullName>Slack_Owner_Webhook_URL__c</fullName>
    <description>Slack webhook URL for session-owner staffing recap notifications.</description>
    <label>Slack Owner Webhook URL</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>