WTPlanner/force-app/main/default/objects/Staffing_Setting__mdt/fields/Slack_Shift_Webhook_URL__c.field-meta.xml
<CustomField>
    <fullName>Slack_Shift_Webhook_URL__c</fullName>
    <description>Slack webhook URL for user shift-change notifications (assigned/removed).</description>
    <label>Slack Shift Webhook URL</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>